[gd_scene load_steps=23 format=2]

[ext_resource path="res://Minimap.gd" type="Script" id=1]
[ext_resource path="res://NOVO MINI MAPA.png" type="Texture" id=2]

[sub_resource type="Animation" id=1]
resource_name = "Blink"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Blink"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=5]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=7]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "Blink"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "Blink"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=12]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "Blink"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=14]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=15]
resource_name = "Blink"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=16]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=17]
resource_name = "Blink"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=18]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=19]
resource_name = "Blink"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=20]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[node name="Minimap" type="ColorRect"]
pause_mode = 2
margin_left = 1.0
margin_top = 1.0
margin_right = 1281.0
margin_bottom = 1190.0
color = Color( 0, 0, 0, 0.392157 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Map2" type="Sprite" parent="."]
position = Vector2( 510.742, 299.623 )
scale = Vector2( 0.9, 0.6 )
texture = ExtResource( 2 )

[node name="LevelA" type="Node2D" parent="."]

[node name="Blink" type="ColorRect" parent="LevelA"]
visible = false
self_modulate = Color( 1, 1, 1, 0.158411 )
margin_left = 492.0
margin_top = 202.0
margin_right = 587.0
margin_bottom = 265.0
color = Color( 0.454902, 0.843137, 0.392157, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="LevelA/Blink"]
autoplay = "Blink"
anims/Blink = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="Hide" type="ColorRect" parent="LevelA"]
visible = false
margin_left = 477.0
margin_top = 199.0
margin_right = 576.0
margin_bottom = 255.0
color = Color( 0.858824, 0.662745, 0.329412, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelD" type="Node2D" parent="."]

[node name="Blink" type="ColorRect" parent="LevelD"]
visible = false
self_modulate = Color( 1, 1, 1, 0.158411 )
margin_left = 389.0
margin_top = 343.0
margin_right = 484.0
margin_bottom = 407.0
color = Color( 0.454902, 0.843137, 0.392157, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="LevelD/Blink"]
autoplay = "Blink"
anims/Blink = SubResource( 3 )
anims/RESET = SubResource( 4 )

[node name="Hide" type="ColorRect" parent="LevelD"]
visible = false
margin_left = 477.0
margin_top = 199.0
margin_right = 576.0
margin_bottom = 255.0
color = Color( 0.858824, 0.662745, 0.329412, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelB" type="Node2D" parent="."]

[node name="Blink" type="ColorRect" parent="LevelB"]
visible = false
self_modulate = Color( 1, 1, 1, 0.622087 )
margin_left = 497.0
margin_top = 275.0
margin_right = 590.0
margin_bottom = 338.0
color = Color( 0.454902, 0.843137, 0.392157, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="LevelB/Blink"]
autoplay = "Blink"
anims/Blink = SubResource( 5 )
anims/RESET = SubResource( 6 )

[node name="Hide" type="ColorRect" parent="LevelB"]
visible = false
margin_left = 481.0
margin_top = 263.0
margin_right = 580.0
margin_bottom = 319.0
color = Color( 0.858824, 0.662745, 0.329412, 1 )

[node name="LevelC" type="Node2D" parent="."]

[node name="Blink" type="ColorRect" parent="LevelC"]
visible = false
self_modulate = Color( 1, 1, 1, 0.61479 )
margin_left = 603.0
margin_top = 275.0
margin_right = 698.0
margin_bottom = 338.0
color = Color( 0.454902, 0.843137, 0.392157, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="LevelC/Blink"]
autoplay = "Blink"
anims/Blink = SubResource( 7 )
anims/RESET = SubResource( 8 )

[node name="Hide" type="ColorRect" parent="LevelC"]
visible = false
margin_left = 593.0
margin_top = 262.0
margin_right = 692.0
margin_bottom = 318.0
color = Color( 0.858824, 0.662745, 0.329412, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelE" type="Node2D" parent="."]

[node name="Blink" type="ColorRect" parent="LevelE"]
visible = false
self_modulate = Color( 1, 1, 1, 0.125462 )
margin_left = 496.0
margin_top = 344.0
margin_right = 591.0
margin_bottom = 407.0
color = Color( 0.454902, 0.843137, 0.392157, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="LevelE/Blink"]
autoplay = "Blink"
anims/Blink = SubResource( 9 )
anims/RESET = SubResource( 10 )

[node name="Hide" type="ColorRect" parent="LevelE"]
visible = false
margin_left = 481.0
margin_top = 323.0
margin_right = 580.0
margin_bottom = 379.0
color = Color( 0.858824, 0.662745, 0.329412, 1 )

[node name="LevelF" type="Node2D" parent="."]

[node name="Blink" type="ColorRect" parent="LevelF"]
visible = false
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 282.0
margin_top = 344.0
margin_right = 377.0
margin_bottom = 407.0
color = Color( 0.454902, 0.843137, 0.392157, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="LevelF/Blink"]
autoplay = "Blink"
anims/Blink = SubResource( 11 )
anims/RESET = SubResource( 12 )

[node name="Hide" type="ColorRect" parent="LevelF"]
visible = false
margin_left = 258.0
margin_top = 323.0
margin_right = 357.0
margin_bottom = 379.0
color = Color( 0.858824, 0.662745, 0.329412, 1 )

[node name="LevelG" type="Node2D" parent="."]

[node name="Blink" type="ColorRect" parent="LevelG"]
visible = false
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 389.0
margin_top = 413.0
margin_right = 484.0
margin_bottom = 476.0
color = Color( 0.454902, 0.843137, 0.392157, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="LevelG/Blink"]
autoplay = "Blink"
anims/Blink = SubResource( 13 )
anims/RESET = SubResource( 14 )

[node name="Hide" type="ColorRect" parent="LevelG"]
visible = false
margin_left = 369.0
margin_top = 384.0
margin_right = 468.0
margin_bottom = 440.0
color = Color( 0.858824, 0.662745, 0.329412, 1 )

[node name="LevelH" type="Node2D" parent="."]

[node name="Blink" type="ColorRect" parent="LevelH"]
visible = false
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 492.0
margin_top = 131.0
margin_right = 587.0
margin_bottom = 194.0
color = Color( 0.454902, 0.843137, 0.392157, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="LevelH/Blink"]
autoplay = "Blink"
anims/Blink = SubResource( 15 )
anims/RESET = SubResource( 16 )

[node name="Hide" type="ColorRect" parent="LevelH"]
visible = false
margin_left = 477.0
margin_top = 136.0
margin_right = 576.0
margin_bottom = 192.0
color = Color( 0.858824, 0.662745, 0.329412, 1 )

[node name="LevelI" type="Node2D" parent="."]

[node name="Blink" type="ColorRect" parent="LevelI"]
visible = false
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 604.0
margin_top = 202.0
margin_right = 698.0
margin_bottom = 265.0
color = Color( 0.454902, 0.843137, 0.392157, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="LevelI/Blink"]
autoplay = "Blink"
anims/Blink = SubResource( 17 )
anims/RESET = SubResource( 18 )

[node name="Hide" type="ColorRect" parent="LevelI"]
visible = false
margin_left = 593.0
margin_top = 198.0
margin_right = 692.0
margin_bottom = 254.0
color = Color( 0.858824, 0.662745, 0.329412, 1 )

[node name="LevelJ" type="Node2D" parent="."]

[node name="Blink" type="ColorRect" parent="LevelJ"]
visible = false
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 390.0
margin_top = 275.0
margin_right = 483.0
margin_bottom = 338.0
color = Color( 0.454902, 0.843137, 0.392157, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="LevelJ/Blink"]
autoplay = "Blink"
anims/Blink = SubResource( 19 )
anims/RESET = SubResource( 20 )

[node name="Hide" type="ColorRect" parent="LevelJ"]
visible = false
margin_left = 368.0
margin_top = 262.0
margin_right = 467.0
margin_bottom = 318.0
color = Color( 0.858824, 0.662745, 0.329412, 1 )
